modifcaciones landing page

--- a/src/app/components/landing/hero/hero.component.html
+++ b/src/app/components/landing/hero/hero.component.html
@@ -1,4 +1,4 @@
-<div id="carouselExample" class="carousel slide">
+<!-- <div id="carouselExample" class="carousel slide">
   <div class="carousel-inner">
     <div class="carousel-item active contenedor">
       <img [src]="imageBlack" class="d-block w-100" alt="...">
@@ -10,4 +10,14 @@
       </div>
     </div>
   </div>
-</div>
+</div> -->
+
+<header>
+  <img [src]="imageBlack" alta="imágen de portada de la web" />
+  <div class="contentText container">
+    <h3>PRo Location</h3>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo nesciunt sed omnis facilis nam earum blanditiis eius
+      veritatis, praesentium consequuntur.</p>
+    <a href="#" class="btn btn-primary">Contactar</a>
+  </div>
+</header>
