cambios en la landing

--- a/src/app/components/landing/slogan-with-illustration/slogan-with-illustration.component.html
+++ b/src/app/components/landing/slogan-with-illustration/slogan-with-illustration.component.html
@@ -1,4 +1,9 @@
 <section class="mt-5">
   <img [src]="imageBackground" alt="imagen de fondo para una sección con un slogan"/>
-  <h2>Sigue en tiempo real tus vehículos, <br />llega siempre a tiempo a tu destino</h2>
+  <h2 class="container d-none d-lg-block slogan1">
+    Sigue en tiempo real tus vehículos, <br/>llega siempre a tiempo a tu destino
+  </h2>
+  <h3 class="container d-block d-lg-none slogan2">
+    Sigue en tiempo real tus vehículos, <br/>llega siempre a tiempo a tu destino
+  </h3>
 </section>
