--- a/src/app/components/landing/slogan-with-illustration2/slogan-with-illustration2.component.html
+++ b/src/app/components/landing/slogan-with-illustration2/slogan-with-illustration2.component.html
@@ -1,4 +1,9 @@
 <section class="mt-5">
   <img [src]="imageBackground" alt="imagen de fondo para una sección con un slogan"/>
-  <h2>No Pierdas de Vista tu Flota. <br />Confía en Nosotros para Llegar Lejos.</h2>
+  <h2 class="container d-none d-lg-block slogan1">
+    No Pierdas de Vista tu Flota. <br/>Confía en Nosotros para Llegar Lejos.
+  </h2>
+  <h3 class="container d-block d-lg-none slogan2">
+    No Pierdas de Vista tu Flota. <br/>Confía en Nosotros para Llegar Lejos.
+  </h3>
 </section>
