--- a/src/app/components/landing/what-we-do/what-we-do.component.css
+++ b/src/app/components/landing/what-we-do/what-we-do.component.css
@@ -17,6 +17,13 @@ article {
   margin: 5px 0 5px 0;
 }
 
+.image {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
 img {
   width: 100%
 }
+
