--- a/src/app/components/landing/what-we-offer/what-we-offer.component.html
+++ b/src/app/components/landing/what-we-offer/what-we-offer.component.html
@@ -1,4 +1,4 @@
-<section class="container-fluid text-center mt-5">
+<section class="container text-center mt-5">
 
   <header>
     <h3>¿Que Hace PRo Location para TÍ?</h3>
