--- a/src/app/components/landing/slogan-with-illustration/slogan-with-illustration.component.css
+++ b/src/app/components/landing/slogan-with-illustration/slogan-with-illustration.component.css
@@ -14,7 +14,15 @@ img {
   position: relative;
 }
 
-h2 {
+h2, h3 {
   position: absolute;
   color: white;
+}
+
+.slogan1 {
+  display: block;
+}
+
+.slogan2 {
+  display: none;
 }
