--- a/src/app/components/landing/where-use/where-use.component.html
+++ b/src/app/components/landing/where-use/where-use.component.html
@@ -1,4 +1,4 @@
-<section>
+<section class="container">
 
   <div class="row">
     <div class="col text-center mt-5">
@@ -6,9 +6,9 @@
     </div>
   </div>
 
-  <div class="container text-center mt-5">
-    <div class="row mt-5">
-      <div class="col">
+  <div class="container text-center">
+    <div class="row row-cols-sm-1 row-cols-md-2 row-cols-lg-3">
+      <div class="col cardContent mt-5">
         <div class="card" style="width: 18rem;">
           <img class="card-img-top" alt="imagen de portada para la tarjeta"
             src="https://images.unsplash.com/photo-1594771804886-a933bb2d609b?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1482&q=80" />
@@ -19,7 +19,7 @@
           </div>
         </div>
       </div>
-      <div class="col">
+      <div class="col cardContent mt-5">
         <div class="card" style="width: 18rem;">
           <img class="card-img-top" alt="imagen de portada para la tarjeta"
                src="https://images.unsplash.com/photo-1594771804886-a933bb2d609b?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1482&q=80" />
@@ -30,7 +30,7 @@
           </div>
         </div>
       </div>
-      <div class="col">
+      <div class="col cardContent mt-5">
         <div class="card" style="width: 18rem;">
           <img class="card-img-top" alt="imagen de portada para la tarjeta"
                src="https://images.unsplash.com/photo-1594771804886-a933bb2d609b?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1482&q=80" />
@@ -41,9 +41,7 @@
           </div>
         </div>
       </div>
-    </div>
-    <div class="row mt-5">
-      <div class="col">
+      <div class="col cardContent mt-5">
         <div class="card" style="width: 18rem;">
           <img class="card-img-top" alt="imagen de portada para la tarjeta"
                src="https://images.unsplash.com/photo-1594771804886-a933bb2d609b?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1482&q=80" />
@@ -54,7 +52,7 @@
           </div>
         </div>
       </div>
-      <div class="col">
+      <div class="col cardContent mt-5">
         <div class="card" style="width: 18rem;">
           <img class="card-img-top" alt="imagen de portada para la tarjeta"
                src="https://images.unsplash.com/photo-1594771804886-a933bb2d609b?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1482&q=80" />
@@ -65,7 +63,7 @@
           </div>
         </div>
       </div>
-      <div class="col">
+      <div class="col cardContent mt-5">
         <div class="card" style="width: 18rem;">
           <img class="card-img-top" alt="imagen de portada para la tarjeta"
                src="https://images.unsplash.com/photo-1594771804886-a933bb2d609b?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1482&q=80" />
