--- a/src/app/components/landing/contact-form/contact-form.component.html
+++ b/src/app/components/landing/contact-form/contact-form.component.html
@@ -1,27 +1,36 @@
-<div class="bg-light">
-  <section class="container">
+<section class="container">
 
-    <h1 class="text-center">¿Hablamos?</h1>
+  <h1 class="text-center">¿Hablamos?</h1>
 
-    <div class="mb-3 mt-5">
+  <div class="row">
+
+    <div id="containerDivEmail" class="mb-3 col">
       <label for="email" class="form-label">Email</label>
-      <input type="email" class="form-control" id="email" placeholder="nombre@ejemplo.com">
-    </div>
-    <div class="mb-3">
-      <label for="subject" class="form-label">Asunto</label>
-      <input type="email" class="form-control" id="subject" placeholder="Contacto comercial.">
-    </div>
-    <div class="mb-3">
-      <label for="message" class="form-label">Mensaje</label>
-      <textarea class="form-control" id="message" rows="3"></textarea>
-    </div>
-    <div class="mb-3">
-      <label for="file" class="form-label">Archivo</label>
-      <input class="form-control" type="file" id="file">
+      <div id="divEmail" class="input-group">
+        <div class="input-group-text">@</div>
+        <input type="email" class="form-control" id="email" placeholder="nombre@ejemplo.com" [(ngModel)]="email">
+      </div>
     </div>
 
-    <div class="container mt-2 text-center">
-      <button type="button" class="btn btn-primary ">Enviar</button>
+    <div class="mb-3 col">
+      <label for="subject" class="form-label">Asunto</label>
+      <input type="email" class="form-control" id="subject" placeholder="Ej: Contacto Comercial" [(ngModel)]="subject">
     </div>
-  </section>
-</div>
+
+  </div>
+
+  <div class="mb-3">
+    <label for="message" class="form-label">Mensaje</label>
+    <textarea class="form-control" id="message" rows="3" [(ngModel)]="message"></textarea>
+  </div>
+
+  <div class="mb-3">
+    <label for="file" class="form-label" [(ngModel)]="fileInput">Archivo</label>
+    <input class="form-control" type="file" id="file">
+  </div>
+
+  <div class="container text-center">
+    <button (click)="validateForm()" class="btn btn-primary ">Enviar</button>
+  </div>
+
+</section>
