--- a/src/app/components/landing/footer/footer.component.html
+++ b/src/app/components/landing/footer/footer.component.html
@@ -1,9 +1,10 @@
-<section class="container mt-5 text-center">
-
+<section>
+  <div class="container text-center">
   <h1 class="display-6">
-    Trabajo Final de Grado (GrupoXX)
+    PRo Location · Trabajo Final de Grado · GrupoXX
   </h1>
   <p class="lead">
-    Raúl Herrera & Pavlo Dudnyk
+    Raúl Herrera & Pavlo Dudnyk.
   </p>
+  </div>
 </section>
