--- a/src/app/components/landing/hero/hero.component.html
+++ b/src/app/components/landing/hero/hero.component.html
@@ -1,23 +1,9 @@
-<!-- <div id="carouselExample" class="carousel slide">
-  <div class="carousel-inner">
-    <div class="carousel-item active contenedor">
-      <img [src]="imageBlack" class="d-block w-100" alt="...">
-      <div class="carousel-caption d-none d-md-block d-flex align-items-center">
-        <h1 class="display-1">PRo Location</h1>
-        <p class="lead ">Geolocaliza tus flotas de vehículos con PRoLocation. Control en tiempo real, optimiza rutas, reduce costos
-          operativos y mejora la eficiencia de tu negocio. Únete hoy y lleva tu empresa al siguiente nivel.</p>
-        <button class="btn btn-primary">CONTACTAR</button>
-      </div>
-    </div>
-  </div>
-</div> -->
-
 <header>
-  <img [src]="imageBlack" alta="imágen de portada de la web" />
+  <img [src]="imageHero" alt="imagen de portada de la web"/>
   <div class="contentText container">
-    <h3>PRo Location</h3>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo nesciunt sed omnis facilis nam earum blanditiis eius
-      veritatis, praesentium consequuntur.</p>
-    <a href="#" class="btn btn-primary">Contactar</a>
+    <h1 class="display-1">PRo Location</h1>
+    <h1 class="h3">Geolocaliza tus flotas de vehículos con PRoLocation. <br />Control en tiempo real, optimiza rutas, reduce costos
+      operativos y mejora la eficiencia de tu negocio. <br /><b>Únete hoy y lleva tu empresa al siguiente nivel.</b></h1>
+    <a href="#contactComponent" class="btn btn-lg btn-primary">Contactar</a>
   </div>
 </header>
