--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,5 +5,6 @@
 <app-what-we-offer></app-what-we-offer>
 <app-slogan-with-illustration2></app-slogan-with-illustration2>
 <app-where-use></app-where-use>
+<app-slogan-with-illustration3></app-slogan-with-illustration3>
 <app-contact-form></app-contact-form>
 <app-footer></app-footer>
