--- a/src/app/components/landing/contact-form/contact-form.component.css
+++ b/src/app/components/landing/contact-form/contact-form.component.css
@@ -1,11 +1,8 @@
 section {
-  margin-top: 10vh;
+  margin-top: 100px;
+  margin-bottom: 100px;
 }
 
-h1 {
-  margin-bottom: 5vh;
-}
-
-button {
-  margin-top: 3vh;
+article {
+  margin: 50px 0 50px 0;
 }
