--- a/src/app/components/landing/footer/footer.component.css
+++ b/src/app/components/landing/footer/footer.component.css
@@ -1,1 +1,7 @@
-
+section {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-items: center;
+  margin: 100px 0 100px 0;
+}
