--- a/src/app/components/landing/hero/hero.component.css
+++ b/src/app/components/landing/hero/hero.component.css
@@ -1,18 +1,38 @@
 header {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  background-color: black;
 }
 
 img {
-    width: 100%;
-    height: 100vh;
-    position: relative;
+  width: 100%;
+  height: 100vh;
+  position: relative;
+  object-fit: cover;
+  opacity: 0.5;
 }
 
 .contentText {
-    position: absolute;
-    color: white;
-    text-align: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  position: absolute;
+  color: white;
+  text-align: center;
+}
+
+.display-1 {
+  text-shadow: 3px 3px 6px rgba(0, 0, 0, 0.75);
+}
+
+.h3 {
+  margin: 25px 0 50px 0;
+  width: 75%;
+  text-shadow: 1px 1px 4px rgba(0, 0, 0, 0.75);
+}
+
+a {
+  box-shadow: 1px 1px 4px 1px rgba(0, 0, 0, 0.5);
 }
