--- a/src/app/components/landing/slogan-with-illustration2/slogan-with-illustration2.component.css
+++ b/src/app/components/landing/slogan-with-illustration2/slogan-with-illustration2.component.css
@@ -1,11 +1,12 @@
 section {
   width: 100%;
-  height: 500px;
+  height: 75vh;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   text-align: center;
+  background-color: black;
 }
 
 img {
@@ -14,9 +15,10 @@ img {
   position: relative;
 }
 
-h2, h3 {
+h1 {
   position: absolute;
   color: white;
+  text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.75);
 }
 
 .slogan1 {
@@ -25,4 +27,9 @@ h2, h3 {
 
 .slogan2 {
   display: none;
+}
+
+img {
+  object-fit: cover;
+  opacity: 0.5;
 }
