--- a/src/app/components/landing/what-we-offer/what-we-offer.component.css
+++ b/src/app/components/landing/what-we-offer/what-we-offer.component.css
@@ -1,15 +1,36 @@
+/************************************/
+/*Resolución mayor o igual a 768px.*/
+/************************************/
+
+
+section {
+  margin-top: 100px;
+  margin-bottom: 100px;
+}
+
 article {
   display: flex;
   justify-content: space-between;
+  margin-top: 50px;
 }
 
-.col {
+.colImg {
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   width: 50vw;
-  padding: 1vh 1vw 1vh 1vw;
+  padding: 1vh 1vw 1vh 0vw;
+  text-align: left;
+}
+
+.colTxt {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  width: 50vw;
+  padding: 1vh 0vw 1vh 1vw;
   text-align: left;
 }
 
@@ -27,4 +48,31 @@ img {
 
 .list-group-item {
   height: 65px;
+}
+
+
+/************************************/
+/*Resolución menor o igual a 768px.*/
+/************************************/
+
+
+@media screen and (max-width: 768px) {
+
+  article {
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .colImg {
+    padding: 0;
+    width: 100%;
+  }
+
+  .colTxt {
+    margin-top: 25px;
+    padding: 0;
+    width: 100%;
+    text-align: center;
+  }
+
 }
