implementada seguridad en las URLs y desarrollado parte del panel de admin

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,10 +1,22 @@
-<app-nav></app-nav>
-<app-hero></app-hero>
-<app-what-we-do></app-what-we-do>
-<app-slogan-with-illustration></app-slogan-with-illustration>
-<app-what-we-offer></app-what-we-offer>
-<app-slogan-with-illustration2></app-slogan-with-illustration2>
-<app-where-use></app-where-use>
-<app-slogan-with-illustration3></app-slogan-with-illustration3>
-<app-contact-form></app-contact-form>
-<app-footer></app-footer>
+<!-- ROUTER LANDING -->
+
+<router-outlet name="nav"></router-outlet>
+<router-outlet name="hero"></router-outlet>
+<router-outlet name="what-we-do"></router-outlet>
+<router-outlet name="slogan-with-illustration"></router-outlet>
+<router-outlet name="what-we-offer"></router-outlet>
+<router-outlet name="slogan-with-illustration2"></router-outlet>
+<router-outlet name="where-use"></router-outlet>
+<router-outlet name="slogan-with-illustration3"></router-outlet>
+<router-outlet name="contact-form"></router-outlet>
+<router-outlet name="footer"></router-outlet>
+
+<!-- ROUTER SIGNING -->
+
+<router-outlet name="signing"></router-outlet>
+
+<!-- ROUTER APP -->
+
+<router-outlet name="nav-app"></router-outlet>
+<router-outlet name="aside-app"></router-outlet>
+<router-outlet name="footer-app"></router-outlet>
