--- a/src/app/components/landing/nav/nav.component.html
+++ b/src/app/components/landing/nav/nav.component.html
@@ -1,5 +1,3 @@
-<!-- Navbar -->
-
 <nav class="navbar navbar-expand-lg container py-4">
   <div class="container">
     <a class="navbar-brand" href="/">PRo Location</a>
@@ -13,49 +11,11 @@
           <a class="nav-link" aria-current="page" href="#contactComponent">Contacto</a>
         </li>
         <li class="nav-item">
-          <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">
-            Iniciar Sesión
-          </button>
+          <a type="button" class="btn btn-primary" data-bs-toggle="modal" routerLink="/auth">
+            Acceder
+          </a>
         </li>
       </ul>
     </div>
   </div>
 </nav>
-
-<!-- Modal -->
-
-<div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-  <div class="modal-dialog modal-dialog-centered">
-    <div class="modal-content">
-      <div class="modal-header">
-        <h1 class="modal-title fs-5" id="exampleModalLabel">Iniciar Sesión</h1>
-        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-      </div>
-
-      <div class="modal-body">
-
-        <div id="containerDivEmail">
-          <label for="email" class="form-label">E-mail:</label>
-          <div id="divEmail" class="input-group has-validation">
-            <span class="input-group-text">@</span>
-            <input type="email" class="form-control" id="email" aria-describedby="emailPrepend"
-                   placeholder="nombre@ejemplo.com" [(ngModel)]="email">
-          </div>
-        </div>
-
-        <div id="containerDivPassword">
-          <label for="passwordInput" class="form-label">Contraseña:</label>
-          <div id="divPassword" class="input-group has-validation">
-            <input type="password" class="form-control" id="passwordInput" placeholder="*****" [(ngModel)]="password">
-          </div>
-        </div>
-
-      </div>
-
-      <div class="modal-footer">
-        <button type="button" class="btn btn-primary" (click)="validateForm()">Login</button>
-      </div>
-
-    </div>
-  </div>
-</div>
