Pruebas en primera página de app

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -18,5 +18,5 @@
 <!-- ROUTER APP -->
 
 <router-outlet name="nav-app"></router-outlet>
-<router-outlet name="aside-app"></router-outlet>
+<router-outlet name="main-app"></router-outlet>
 <router-outlet name="footer-app"></router-outlet>
